# python-casefy

./: .buildinfo  .deepsource.toml  .gitignore  LICENSE  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  test_casefy.py
.github/workflows/: build-docs.yml  run-tests.yml
casefy/: __init__.py  casefy.py
docs/: requirements.txt  try.py
docs/source/: api.rst  conf.py  index.rst
tests/: test_casefy.py
