[metadata]
name = casefy
version = 0.1.1
author = Diego Miguel Lozano
author_email = hello@diegomiguel.me
description = Utilities for string case conversion.
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/dmlls/python-casefy
project_urls =
    Bug Tracker = https://github.com/dmlls/python-casefy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = casefy
python_requires = >=3.6
test_suite = tests

[options.package_data]
* = py.typed
